# LiDAR_ROS_PCL

./: README.md
lidar_basic/: CMakeLists.txt  package.xml
lidar_basic/launch/: process_lidar.launch
lidar_basic/src/: .process_lidar.cpp.swp  process_lidar.cpp  rotate_bot.cpp
lidar_basic/srv/: AdjustAngularVel.srv
lidar_bot/: CMakeLists.txt  package.xml
lidar_bot/launch/: robot.launch  world.launch
lidar_bot/rviz/: lidar_bot.rviz
lidar_bot/urdf/: lidar_robot.gazebo  lidar_robot.xacro
